[gd_scene load_steps=9 format=3 uid="uid://dpqpbds16fmgh"]

[ext_resource type="Theme" uid="uid://bp7ntkss4y7ms" path="res://theme.tres" id="1_0c86d"]
[ext_resource type="PackedScene" uid="uid://dwl8qyprnb8is" path="res://scenes/color_editor/color_editor.tscn" id="1_ntfhl"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_qg5aj"]
[ext_resource type="PackedScene" uid="uid://clr3rba3j2bsb" path="res://scenes/canvas.tscn" id="2_hvaxd"]
[ext_resource type="PackedScene" uid="uid://dcjw6gcgty4km" path="res://scenes/color_bar.tscn" id="4_5abg1"]

[sub_resource type="Gradient" id="Gradient_lodis"]
colors = PackedColorArray(0.73535, 0.73535, 0.73535, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fduj5"]
gradient = SubResource("Gradient_lodis")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vt2l4"]
texture = SubResource("GradientTexture1D_fduj5")

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0c86d")
script = ExtResource("1_qg5aj")

[node name="MainSplit" type="HSplitContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Canvas" parent="MainSplit" instance=ExtResource("2_hvaxd")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainSplit"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TopBar" type="HBoxContainer" parent="MainSplit/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MenuBar" type="MenuBar" parent="MainSplit/VBoxContainer/TopBar"]
layout_mode = 2

[node name="File" type="PopupMenu" parent="MainSplit/VBoxContainer/TopBar/MenuBar"]

[node name="View" type="PopupMenu" parent="MainSplit/VBoxContainer/TopBar/MenuBar"]

[node name="Gradient" type="Panel" parent="MainSplit/VBoxContainer/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_vt2l4")

[node name="ColorBar" parent="MainSplit/VBoxContainer/TopBar" instance=ExtResource("4_5abg1")]
layout_mode = 2

[node name="ColorEditor" parent="MainSplit/VBoxContainer" instance=ExtResource("1_ntfhl")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 3

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="color_changed" from="MainSplit/VBoxContainer/ColorEditor" to="." method="_on_color_editor_color_changed"]
[connection signal="color_changed" from="MainSplit/VBoxContainer/ColorEditor" to="MainSplit/Canvas" method="set_color"]
